add validate and documentation of api
