# handlers/delete.go
@@ -2,34 +2,40 @@ package handlers
 
 import (
 	"net/http"
-	"strconv"
 
 	"github.com/LucasSaraiva019/coffe-shop-api/data"
-	"github.com/gorilla/mux"
 )
 
 // swagger:route DELETE /products/{id} products deleteProduct
-// Returns no Content
+// Update a products details
+//
 // responses:
-// 	200: noContent
+//	201: noContentResponse
+//  404: errorResponse
+//  501: errorResponse
 
-func (p *Products) DeleteProduct(rw http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	id, err := strconv.Atoi(vars["id"])
-	if err != nil {
-		http.Error(rw, "Enable to convert id", http.StatusBadRequest)
-		return
-	}
-	p.l.Println("Handle DELETE Product", id)
+// Delete handles DELETE requests and removes items from the database
+func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
+	id := getProductID(r)
 
-	err = data.DeleteProduct(id)
+	p.l.Println("[DEBUG] deleting record id", id)
+
+	err := data.DeleteProduct(id)
 	if err == data.ErrProductNotFound {
-		http.Error(rw, "Product Note found", http.StatusNotFound)
-		return
-	}
-	if err != nil {
-		http.Error(rw, "Product Note found", http.StatusInternalServerError)
+		p.l.Println("[ERROR] deleting record id does not exist")
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
 
+	if err != nil {
+		p.l.Println("[ERROR] deleting record", err)
+
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	rw.WriteHeader(http.StatusNoContent)
 }
